// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag List Component does not render when tags are empty 1`] = `
<div>
  


</div>
`;

exports[`Tag List Component renders with content slots 1`] = `
<div>
  

  
  <div
    class="ct-tag-list ct-theme-light  "
  >
    
                  
    <div
      class="ct-tag-list__content-top"
    >
      Top content
    </div>
    
          
                                                                                          

  
    <ul
      class="ct-item-list ct-item-list--horizontal ct-item-list--small  ct-tag-list__content"
    >
      
                  
      <li
        class="ct-item-list__item"
      >
                    

   
  
  
    
        <span
          class="ct-tag ct-theme-light ct-tag--primary    "
        >
               Tag 1   
        </span>
        
          
      </li>
      
                        
      <li
        class="ct-item-list__item"
      >
                    

   
  
  
    
        <span
          class="ct-tag ct-theme-light ct-tag--primary    "
        >
               Tag 2   
        </span>
        
          
      </li>
      
            
    </ul>
    
          
                  
    <div
      class="ct-tag-list__content-bottom"
    >
      Bottom content
    </div>
    
            
  </div>
  

</div>
`;

exports[`Tag List Component renders with optional attributes 1`] = `
<div>
  

  
  <div
    class="ct-tag-list ct-theme-dark ct-vertical-spacing--both custom-class"
    data-test="true"
  >
    
                  
    <div
      class="ct-tag-list__content-top"
    >
      Top content
    </div>
    
          
                                                                                          

  
    <ul
      class="ct-item-list ct-item-list--horizontal ct-item-list--small  ct-tag-list__content"
    >
      
                  
      <li
        class="ct-item-list__item"
      >
                    

   
  
  
    
        <span
          class="ct-tag ct-theme-dark ct-tag--primary    "
        >
               Tag 1   
        </span>
        
          
      </li>
      
                        
      <li
        class="ct-item-list__item"
      >
                    

   
  
  
    
        <span
          class="ct-tag ct-theme-dark ct-tag--primary    "
        >
               Tag 2   
        </span>
        
          
      </li>
      
            
    </ul>
    
          
                  
    <div
      class="ct-tag-list__content-bottom"
    >
      Bottom content
    </div>
    
            
  </div>
  

</div>
`;

exports[`Tag List Component renders with required attributes 1`] = `
<div>
  

  
  <div
    class="ct-tag-list ct-theme-light  "
  >
    
              
                                                                                                                      

  
    <ul
      class="ct-item-list ct-item-list--horizontal ct-item-list--small  ct-tag-list__content"
    >
      
                  
      <li
        class="ct-item-list__item"
      >
                    

   
  
  
    
        <span
          class="ct-tag ct-theme-light ct-tag--primary    "
        >
               Tag 1   
        </span>
        
          
      </li>
      
                        
      <li
        class="ct-item-list__item"
      >
                    

   
  
  
    
        <span
          class="ct-tag ct-theme-light ct-tag--primary    "
        >
               Tag 2   
        </span>
        
          
      </li>
      
                        
      <li
        class="ct-item-list__item"
      >
                    

   
  
  
    
        <span
          class="ct-tag ct-theme-light ct-tag--primary    "
        >
               Tag 3   
        </span>
        
          
      </li>
      
            
    </ul>
    
          
                
  </div>
  

</div>
`;
